# YF_BOX_LIFE

./: CMakeLists.txt  MainPage.cpp  MainPage.h  README.md  main.cpp  tips.md
Pages/: CMakeLists.txt  MainPage.cpp  MainPage.h  MaskPage.cpp  MaskPage.h
UI/: mask.ui  ui_mask.h  ui_untitled.h  untitled.ui
